In machine_learning_template.ipynb, in Summary section, restructure and reformulate preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,13 +3160,23 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
-    "- **Loaded data** from a .csv file using `read_csv` from `pandas` or from a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `read_sql` from `pandas`.\n",
+    "- **Loaded data**:\n",
+    "    - From a .csv file using `read_csv` from `pandas`.\n",
+    "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `read_sql` from `pandas`.\n",
     "- **Removed duplicates** (e.g., based on the ID column) using `drop_duplicates` from `pandas`.\n",
-    "- **Handled incorrect data types** (e.g., converted string columns to numerical or datetime columns) using `astype` or `to_datetime` from `pandas`.\n",
-    "- **Extracted features** (e.g., created categorical, numerical, or boolean features from string columns) using custom functions with `apply` from `pandas`, `lambda` functions, and `re` for pattern matching.\n",
-    "- **Handled missing values** (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns) using `dropna` or `fillna` from `pandas`.\n",
+    "- **Handled incorrect data types**: Converted string columns to numerical types (`astype`) and datetime types (`to_datetime`) using `pandas`.\n",
+    "- **Extracted features**:\n",
+    "    - Created categorical features from string columns using custom functions with `apply` from `pandas`.\n",
+    "    - Created numerical features from string columns using custom functions with `apply` from `pandas`, and `re` for numeric pattern matching.\n",
+    "    - Created boolean features from string columns using `lambda` functions with `apply` from `pandas`.\n",
+    "- **Handled missing values**:\n",
+    "    - Through deletion using `dropna` from `pandas`.\n",
+    "    - Numerical columns: Through median imputation using `fillna` from `pandas`.\n",
+    "    - Categorical columns: Through mode imputation using `fillna` from `pandas`.\n",
     "- **Handled outliers** (e.g., removed them using the 3SD method or 1.5 IQR method) with a custom transformer class utilizing `BaseEstimator` and `TransformerMixin` from `sklearn`.\n",
-    "- **Saved the preprocessed data** as a .csv file using `to_csv` from `pandas` or in a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
+    "- **Saved the preprocessed data**:\n",
+    "    - As a .csv file using `to_csv` from `pandas`.\n",
+    "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
     "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
     "- **Scaled numerical features** (e.g., using standard scaling or min-max normalization) with `StandardScaler` or `MinMaxScaler` from `sklearn`.\n",
     "- **Encoded categorical features** (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
