In machine_learning_template.ipynb, in Summary section, update outlier handling in preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3173,7 +3173,8 @@
     "    - Through deletion using `dropna` from `pandas`.\n",
     "    - Numerical columns: Through median imputation using `fillna` from `pandas`.\n",
     "    - Categorical columns: Through mode imputation using `fillna` from `pandas`.\n",
-    "- **Handled outliers** (e.g., removed them using the 3SD method or 1.5 IQR method) with a custom transformer class utilizing `BaseEstimator` and `TransformerMixin` from `sklearn`.\n",
+    "- **Handled outliers**:\n",
+    "    - Removed univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 interquartile range) by implementing a custom `sklearn` transformer that inherits from `BaseEstimator` and `TransformerMixin`.\n",
     "- **Saved the preprocessed data**:\n",
     "    - As a .csv file using `to_csv` from `pandas`.\n",
     "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
