In machine_learning_template.ipynb, in Summary section, restructure EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3185,11 +3185,19 @@
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
     "- **Univariate EDA**:\n",
-    "    - **Numerical columns**: Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `describe` from `pandas`. Visualized distributions with histograms using `histplot` from `seaborn` and `matplotlib`.\n",
-    "    - **Categorical columns**: Examined frequencies using `value_counts` from `pandas` and visualized them with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`. \n",
+    "    - **Numerical columns**:\n",
+    "        - Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `describe` from `pandas`.\n",
+    "        - Visualized distributions with histograms using `histplot` from `seaborn` and `matplotlib`.\n",
+    "    - **Categorical columns**:\n",
+    "        - Examined frequencies using `value_counts` from `pandas`.\n",
+    "        - Visualized frequencies with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`. \n",
     "- **Bivariate EDA**:\n",
-    "    - **Two numerical columns**: Assessed pairwise relationships with a correlation heatmap, scatterplots, or a scatterplot matrix. Used `corr` from `pandas`, `numpy`, `heatmap` and `scatterplot` from `seaborn`, and `subplot` from `matplotlib`.\n",
-    "    - **Numerical and categorical columns**: Explored relationships with group-wise statistics (e.g., mean or median by category) using `groupby` and `describe` from `pandas`. Visualized results with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`.\n",
+    "    - **Two numerical columns**:\n",
+    "        - Analyzed pairwise relationships with a correlation matrix using `corr` from `pandas` and `numpy`. Visualized them with a heatmap using `heatmap` from `seaborn`.\n",
+    "        - Visualized relationships with scatterplots or a scatterplot matrix using `scatterplot` from `seaborn` and `subplot` from `matplotlib`.\n",
+    "    - **Numerical and categorical columns**:\n",
+    "        - Explored relationships with group-wise statistics (e.g., mean or median by category) using `groupby` and `describe` from `pandas`.\n",
+    "        - Visualized results with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`.\n",
     "\n",
     "## Modeling\n",
     "- **Trained baseline models** to establish performance benchmarks:\n",
