In machine_learning_template.ipynb, in Summary section, update the information on libraries and functions in Data Preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,28 +3160,31 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
+    "Used `pandas`, `sklearn`, `sqlalchemy`, and `mysql-connector-python` for data loading, cleaning, transformation, and saving.\n",
     "- **Loaded data**:\n",
-    "    - From a .csv file using `read_csv` from `pandas`.\n",
-    "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `read_sql` from `pandas`.\n",
-    "- **Removed duplicates** (e.g., based on the ID column) using `drop_duplicates` from `pandas`.\n",
-    "- **Handled incorrect data types**: Converted string columns to numerical types (`astype`) and datetime types (`to_datetime`) using `pandas`.\n",
+    "    - From a .csv file using `pandas.read_csv`.\n",
+    "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas.read_sql`.\n",
+    "- **Removed duplicates**:\n",
+    "    - Dropped duplicate rows (e.g., based on the ID column) using `pandas.drop_duplicates`.\n",
+    "- **Handled incorrect data types**: Converted string columns to numerical types (`pandas.astype`) and datetime types (`pandas.to_datetime`).\n",
     "- **Extracted features**:\n",
-    "    - Created categorical features from string columns using custom functions with `apply` from `pandas`.\n",
-    "    - Created numerical features from string columns using custom functions with `apply` from `pandas`, and `re` for numeric pattern matching.\n",
-    "    - Created boolean features from string columns using `lambda` functions with `apply` from `pandas`.\n",
+    "    - Created categorical features from string columns using custom functions with `pandas.apply`.\n",
+    "    - Created numerical features from string columns using custom functions with `pandas.apply` and `re` for numeric pattern matching.\n",
+    "    - Created boolean features from string columns using `lambda` functions with `pandas.apply`.\n",
     "- **Handled missing values**:\n",
-    "    - Through deletion using `dropna` from `pandas`.\n",
-    "    - Numerical columns: Through median imputation using `fillna` from `pandas`.\n",
-    "    - Categorical columns: Through mode imputation using `fillna` from `pandas`.\n",
+    "    - Deleted rows with missing values using `pandas.dropna`.\n",
+    "    - Imputed missing values:\n",
+    "        - Numerical columns: Imputed the median using `pandas.fillna`.\n",
+    "        - Categorical columns: Imputed the mode using `pandas.fillna`.\n",
     "- **Handled outliers**:\n",
-    "    - Removed univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 interquartile range) by implementing a custom `sklearn` transformer that inherits from `BaseEstimator` and `TransformerMixin`.\n",
+    "    - Removed univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 IQR) with a custom transformer class that inherits from `sklearn.BaseEstimator` and `sklearn.TransformerMixin`.\n",
     "- **Saved the preprocessed data**:\n",
-    "    - As a .csv file using `to_csv` from `pandas`.\n",
-    "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
-    "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
-    "- **Scaled numerical features** (e.g., using standard scaling or min-max normalization) with `StandardScaler` or `MinMaxScaler` from `sklearn`.\n",
-    "- **Encoded categorical features** (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
-    "- **Applied scaling and encoding together** using `ColumnTransformer` from `sklearn`.\n",
+    "    - As a .csv file using `pandas.to_csv`.\n",
+    "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas.to_sql`.\n",
+    "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn.train_test_split`.\n",
+    "- **Scaled numerical features** using standard scaling with `sklearn.StandardScaler` or min-max normalization with `sklearn.MinMaxScaler`.\n",
+    "- **Encoded categorical features** using one-hot encoding with `sklearn.OneHotEncoder`.\n",
+    "- **Applied scaling and encoding together** using `sklearn.ColumnTransformer`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
     "Used `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
