In machine_learning_template.ipynb, in Summary section, change the formatting of libraries and functions in EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3190,18 +3190,18 @@
     "Used `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
     "- **Univariate EDA**:\n",
     "    - **Numerical columns**:\n",
-    "        - Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `pandas.describe`.\n",
-    "        - Visualized distributions with histograms using `seaborn.histplot` and `matplotlib`.\n",
+    "        - Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `pandas` `describe`.\n",
+    "        - Visualized distributions with histograms using `seaborn` `histplot` and `matplotlib`.\n",
     "    - **Categorical columns**:\n",
-    "        - Examined frequencies using `pandas.value_counts`.\n",
-    "        - Visualized frequencies with bar plots (`seaborn.barplot`) or a bar plot matrix (`matplotlib.subplot`). \n",
+    "        - Examined frequencies using `pandas` `value_counts`.\n",
+    "        - Visualized frequencies with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`). \n",
     "- **Bivariate EDA**:\n",
     "    - **Two numerical columns**:\n",
-    "        - Analyzed pairwise relationships with a correlation matrix (`pandas.corr`, `numpy`) and visualized them with a heatmap (`seaborn.heatmap`).\n",
-    "        - Visualized relationships with scatterplots (`seaborn.scatterplot`) or a scatterplot matrix (`matplotlib.subplot`).\n",
+    "        - Analyzed pairwise relationships with a correlation matrix (`pandas` `corr` and `numpy`) and visualized them with a heatmap (`seaborn` `heatmap`).\n",
+    "        - Visualized relationships with scatterplots (`seaborn` `scatterplot`) or a scatterplot matrix (`matplotlib` `subplot`).\n",
     "    - **Numerical and categorical columns**:\n",
-    "        - Explored relationships with group-wise statistics (e.g., mean or median by category) using `pandas.groupby` and `pandas.describe`.\n",
-    "        - Visualized results with bar plots (`seaborn.barplot`) or a bar plot matrix (`matplotlib.subplot`).\n",
+    "        - Explored relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
+    "        - Visualized results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
     "\n",
     "## Modeling\n",
     "- **Trained baseline models** to establish performance benchmarks:\n",
