In machine_learning_template.ipynb, in Summary section, change the formatting of libraries and functions in Modeling section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3204,14 +3204,15 @@
     "        - Visualized results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
     "\n",
     "## Modeling\n",
+    "Used `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
     "- **Trained baseline models** to establish performance benchmarks:\n",
-    "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor (using `sklearn` and `xgboost`).\n",
-    "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier (using `sklearn` and `xgboost`).\n",
-    "- **Performed hyperparameter tuning** (e.g., using grid search) with `GridSearchCV` from `sklearn`.\n",
+    "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
+    "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "- **Performed hyperparameter tuning** using grid search with `sklearn` `GridSearchCV`.\n",
     "- **Selected the final model** based on performance evaluation:\n",
-    "    - **Regression task**: E.g., using RMSE, MAPE, or R-squared (with `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score` from `sklearn`).\n",
-    "    - **Classification task**: E.g., using accuracy, precision, recall, or F1 score (with `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay` from `sklearn`).\n",
-    "- **Saved the final model** (e.g., as a .pkl file) using `pickle`.\n",
+    "    - **Regression task**: Using RMSE, MAPE, or R-squared as the evaluation metric with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
+    "    - **Classification task**: Using accuracy, precision, recall, or F1 score as the evaluation metric with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
+    "- **Saved the final model**: E.g., as a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
