In machine_learning_template.ipynb, in Summary section, change past tense to present tense throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,59 +3160,59 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
-    "Used `pandas`, `sklearn`, `sqlalchemy`, and `mysql-connector-python` for data loading, cleaning, transformation, and saving.\n",
-    "- **Loaded data**:\n",
+    "Use `pandas`, `sklearn`, `sqlalchemy`, and `mysql-connector-python` for data loading, cleaning, transformation, and saving.\n",
+    "- **Load data**:\n",
     "    - From a .csv file using `pandas` `read_csv`.\n",
     "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `read_sql`.\n",
-    "- **Removed duplicates**:\n",
-    "    - Dropped duplicate rows (e.g., based on the ID column) using `pandas` `drop_duplicates`.\n",
-    "- **Handled incorrect data types**: Converted string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
-    "- **Extracted features**:\n",
-    "    - Created categorical features from string columns using custom functions with `pandas` `apply`.\n",
-    "    - Created numerical features from string columns using custom functions with `pandas` `apply` and `re` for numeric pattern matching.\n",
-    "    - Created boolean features from string columns using `lambda` functions with `pandas` `apply`.\n",
-    "- **Handled missing values**:\n",
-    "    - Deleted rows with missing values using `pandas` `dropna`.\n",
-    "    - Imputed missing values:\n",
-    "        - Numerical columns: Imputed the median using `pandas` `fillna`.\n",
-    "        - Categorical columns: Imputed the mode using `pandas` `fillna`.\n",
-    "- **Handled outliers**:\n",
-    "    - Removed univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 IQR) with a custom transformer class that inherits from `sklearn` `BaseEstimator` and `TransformerMixin`.\n",
-    "- **Saved the preprocessed data**:\n",
+    "- **Remove duplicates**:\n",
+    "    - Drop duplicate rows (e.g., based on the ID column) using `pandas` `drop_duplicates`.\n",
+    "- **Handle incorrect data types**: Convert string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
+    "- **Extract features**:\n",
+    "    - Creat categorical features from string columns using custom functions with `pandas` `apply`.\n",
+    "    - Creat numerical features from string columns using custom functions with `pandas` `apply` and `re` for numeric pattern matching.\n",
+    "    - Creat boolean features from string columns using `lambda` functions with `pandas` `apply`.\n",
+    "- **Handle missing values**:\n",
+    "    - Delete rows with missing values using `pandas` `dropna`.\n",
+    "    - Impute missing values:\n",
+    "        - Numerical columns: Impute the median using `pandas` `fillna`.\n",
+    "        - Categorical columns: Impute the mode using `pandas` `fillna`.\n",
+    "- **Handle outliers**:\n",
+    "    - Remove univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 IQR) with a custom transformer class that inherits from `sklearn` `BaseEstimator` and `TransformerMixin`.\n",
+    "- **Save the preprocessed data**:\n",
     "    - As a .csv file using `pandas` `to_csv`.\n",
     "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `to_sql`.\n",
     "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
-    "- **Scaled numerical features** using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
-    "- **Encoded categorical features** using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
-    "- **Applied scaling and encoding together** using `sklearn` `ColumnTransformer`.\n",
+    "- **Scale numerical features** using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
+    "- **Encode categorical features** using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
+    "- **Apply scaling and encoding together** using `sklearn` `ColumnTransformer`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
-    "Used `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
+    "Use `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
     "- **Univariate EDA**:\n",
     "    - **Numerical columns**:\n",
-    "        - Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `pandas` `describe`.\n",
-    "        - Visualized distributions with histograms using `seaborn` `histplot` and `matplotlib`.\n",
+    "        - Analyze descriptive statistics (e.g., mean, median, standard deviation) using `pandas` `describe`.\n",
+    "        - Visualize distributions with histograms using `seaborn` `histplot` and `matplotlib`.\n",
     "    - **Categorical columns**:\n",
-    "        - Examined frequencies using `pandas` `value_counts`.\n",
-    "        - Visualized frequencies with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`). \n",
+    "        - Examine frequencies using `pandas` `value_counts`.\n",
+    "        - Visualize frequencies with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`). \n",
     "- **Bivariate EDA**:\n",
     "    - **Two numerical columns**:\n",
-    "        - Analyzed pairwise relationships with a correlation matrix (`pandas` `corr` and `numpy`) and visualized them with a heatmap (`seaborn` `heatmap`).\n",
-    "        - Visualized relationships with scatterplots (`seaborn` `scatterplot`) or a scatterplot matrix (`matplotlib` `subplot`).\n",
+    "        - Analyze pairwise relationships with a correlation matrix (`pandas` `corr` and `numpy`) and visualize them with a heatmap (`seaborn` `heatmap`).\n",
+    "        - Visualize relationships with scatterplots (`seaborn` `scatterplot`) or a scatterplot matrix (`matplotlib` `subplot`).\n",
     "    - **Numerical and categorical columns**:\n",
-    "        - Explored relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
-    "        - Visualized results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
+    "        - Explore relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
+    "        - Visualize results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
     "\n",
     "## Modeling\n",
-    "Used `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
-    "- **Trained baseline models** to establish performance benchmarks:\n",
+    "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
+    "- **Train baseline models** to establish performance benchmarks:\n",
     "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
     "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
-    "- **Performed hyperparameter tuning** using grid search with `sklearn` `GridSearchCV`.\n",
-    "- **Selected the final model** based on performance evaluation:\n",
+    "- **Perform hyperparameter tuning** using grid search with `sklearn` `GridSearchCV`.\n",
+    "- **Select the final model** based on performance evaluation:\n",
     "    - **Regression task**: Using RMSE, MAPE, or R-squared as the evaluation metric with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
     "    - **Classification task**: Using accuracy, precision, recall, or F1 score as the evaluation metric with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
-    "- **Saved the final model**: E.g., as a .pkl file using `pickle`.\n",
+    "- **Save the final model**: E.g., as a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
