In machine_learning_template.ipynb, in Summary section, add higher-level bullet points for train-validation-test split and feature scaling and encoding

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3166,7 +3166,8 @@
     "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `read_sql`.\n",
     "- **Remove duplicates**:\n",
     "    - Drop duplicate rows (e.g., based on the ID column) using `pandas` `drop_duplicates`.\n",
-    "- **Handle incorrect data types**: Convert string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
+    "- **Handle incorrect data types**:\n",
+    "    - Convert string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
     "- **Extract features**:\n",
     "    - Creat categorical features from string columns using custom functions with `pandas` `apply`.\n",
     "    - Creat numerical features from string columns using custom functions with `pandas` `apply` and `re` for numeric pattern matching.\n",
@@ -3181,10 +3182,12 @@
     "- **Save the preprocessed data**:\n",
     "    - As a .csv file using `pandas` `to_csv`.\n",
     "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `to_sql`.\n",
-    "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
-    "- **Scale numerical features** using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
-    "- **Encode categorical features** using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
-    "- **Apply scaling and encoding together** using `sklearn` `ColumnTransformer`.\n",
+    "- **Train-validation-test split**:\n",
+    "    - Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
+    "- **Feature scaling and encoding**:\n",
+    "    - Scale numerical features using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
+    "    - Encode categorical features using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
+    "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
     "Use `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
