--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3211,11 +3211,15 @@
     "- **Train baseline models** to establish performance benchmarks:\n",
     "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
     "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
-    "- **Perform hyperparameter tuning** using grid search with `sklearn` `GridSearchCV`.\n",
+    "- **Hyperparameter tuning**:\n",
+    "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV`.\n",
     "- **Select the final model** based on performance evaluation:\n",
     "    - **Regression task**: Using RMSE, MAPE, or R-squared as the evaluation metric with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
     "    - **Classification task**: Using accuracy, precision, recall, or F1 score as the evaluation metric with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
-    "- **Save the final model**: E.g., as a .pkl file using `pickle`.\n",
+    "- **Feature importance**:\n",
+    "    - Create a feature importance plot using `xgboost` `plot_importance`.\n",
+    "- **Save the final model**:\n",
+    "    - As a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
