In machine_learning_template.ipynb, in Summary section, update text

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3169,14 +3169,12 @@
     "- **Handle incorrect data types**:\n",
     "    - Convert string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
     "- **Extract features**:\n",
-    "    - Creat categorical features from string columns using custom functions with `pandas` `apply`.\n",
-    "    - Creat numerical features from string columns using custom functions with `pandas` `apply` and `re` for numeric pattern matching.\n",
-    "    - Creat boolean features from string columns using `lambda` functions with `pandas` `apply`.\n",
+    "    - Create categorical features from string columns using custom functions with `pandas` `apply`.\n",
+    "    - Create numerical features from string columns using custom functions with `pandas` `apply`, and `re` for numeric pattern matching.\n",
+    "    - Create boolean features from string columns using `lambda` functions with `pandas` `apply`.\n",
     "- **Handle missing values**:\n",
     "    - Delete rows with missing values using `pandas` `dropna`.\n",
-    "    - Impute missing values:\n",
-    "        - Numerical columns: Impute the median using `pandas` `fillna`.\n",
-    "        - Categorical columns: Impute the mode using `pandas` `fillna`.\n",
+    "    - Impute missing values: Fill in the median for numerical columns or the mode for categorical columns using `pandas` `fillna`.\n",
     "- **Handle outliers**:\n",
     "    - Remove univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 IQR) with a custom transformer class that inherits from `sklearn` `BaseEstimator` and `TransformerMixin`.\n",
     "- **Save the preprocessed data**:\n",
