In machine_learning_template.ipynb, in Modeling (Regression Task) section, add a section for Decision Tree Regressor for hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1646,6 +1646,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f2a5ce4-bffa-4380-8bc8-9846f46a18ad",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Regressor  \n",
+    "Hyperparameters and Default Values:  \n",
+    "- Model Complexity:  \n",
+    "  - `max_depth=None`: Maximum depth of the tree. `None` allows nodes to expand until all leaves are pure or contain fewer samples than `min_samples_split`.  \n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split an internal node.  \n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required to be at a leaf node.  \n",
+    "  - `criterion=\"squared_error\"`: Function to measure the quality of a split. Options include `\"squared_error\"` (mean squared error) and `\"friedman_mse\"` (Friedman’s mean squared error).  \n",
+    "  - `splitter=\"best\"`: Strategy to choose the split at each node. Options are `\"best\"` (best split) and `\"random\"` (random split).  \n",
+    "  - `max_features=None`: Number of features to consider when looking for the best split. If `None`, all features are considered.  \n",
+    "- Regularization:  \n",
+    "  - `ccp_alpha=0.0`: Complexity parameter for pruning. A higher value encourages pruning by penalizing tree complexity.  \n",
+    "  - `min_impurity_decrease=0.0`: A node will split only if the impurity decrease exceeds this threshold.  \n",
+    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes in the tree.  \n",
+    "- Training Behavior:  \n",
+    "  - `random_state=None`: Random seed for reproducibility.  \n",
+    "  - `min_weight_fraction_leaf=0.0`: Minimum weighted fraction of the sum of weights required at a leaf node.  \n",
+    "  - `max_samples=None`: (Only relevant for certain ensemble methods; ignored in standalone `DecisionTreeRegressor`).  \n",
+    "- Performance Optimization:  \n",
+    "  - `presort=\"deprecated\"`: Pre-sorting data for faster splits has been deprecated in recent versions.  \n",
+    "\n",
+    "For more details, refer to the official [scikit-learn DecisionTreeRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5770a103-1db7-4744-b484-44e63c1bf6b3",
    "metadata": {},
    "source": [
@@ -1656,7 +1684,7 @@
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
     "  - `min_samples_split=2`: Minimum number of samples required to split a node.  \n",
     "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.  \n",
-    "  - `max_features='auto'`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
+    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
     "- Regularization:\n",
     "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.  \n",
     "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.  \n",
