--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2509,6 +2509,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03464d34-f939-44c3-a214-669fd9ad68ed",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Classifier  \n",
+    "Hyperparameters and Default Values:  \n",
+    "- Model Complexity:  \n",
+    "  - `max_depth=None`: Maximum depth of the tree. `None` allows nodes to expand until all leaves are pure or contain fewer samples than `min_samples_split`.  \n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split an internal node.  \n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required to be at a leaf node.  \n",
+    "  - `criterion=\"gini\"`: Function to measure the quality of a split. Options include `\"gini\"` (Gini impurity) and `\"entropy\"` (information gain).  \n",
+    "  - `splitter=\"best\"`: Strategy to choose the split at each node. Options are `\"best\"` (best split) and `\"random\"` (random split).  \n",
+    "  - `max_features=None`: Number of features to consider when looking for the best split. If `None`, all features are considered.  \n",
+    "- Regularization:  \n",
+    "  - `ccp_alpha=0.0`: Complexity parameter for pruning. A higher value encourages pruning by penalizing tree complexity.  \n",
+    "  - `min_impurity_decrease=0.0`: A node will split only if the impurity decrease exceeds this threshold.  \n",
+    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes in the tree.  \n",
+    "- Training Behavior:  \n",
+    "  - `random_state=None`: Random seed for reproducibility.  \n",
+    "  - `min_weight_fraction_leaf=0.0`: Minimum weighted fraction of the sum of weights required at a leaf node.  \n",
+    "  - `class_weight=None`: Weights associated with classes. If `None`, all classes are given equal weight. Can be `\"balanced\"` to automatically adjust weights inversely proportional to class frequencies.  \n",
+    "  - `max_samples=None`: (Only relevant for certain ensemble methods; ignored in standalone `DecisionTreeClassifier`).  \n",
+    "- Performance Optimization:  \n",
+    "  - `presort=\"deprecated\"`: Pre-sorting data for faster splits has been deprecated in recent versions.  \n",
+    "\n",
+    "For more details, refer to the official [scikit-learn DecisionTreeClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html).  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e20c6880-b130-4b52-991d-f434d00f3d5e",
    "metadata": {},
    "source": [
